test/Fail/RecursiveRecordNeedsInductionDeclaration.err
RecursiveRecordNeedsInductionDeclaration.agda:4.8-9: error: [RecursiveRecordNeedsInductivity]
Recursive record R needs to be declared as either inductive or
coinductive
